--- a/vanilla-js/src/index.html
+++ b/vanilla-js/src/index.html
@@ -18,6 +18,9 @@
         <div class="columns-1">
             <a class="text-blue-600" id="link" href="">Open map</a>
         </div>
+        <div class="card">
+            <canvas id="my-canvas" width="150px" height="150px"></canvas>
+        </div>
     </div>
 </main>
 </body>
