--- a/vanilla-js/src/index.html
+++ b/vanilla-js/src/index.html
@@ -6,6 +6,8 @@
     <script type="module" src="app.js"></script>
 </head>
 <body>
-<h1>Hello, World!</h1>
+<main>
+<h1 class="text-blue-600">Fetch API</h1>
+</main>
 </body>
 </html>
