06 event bubbling capturing

--- a/vanilla-js/src/index.html
+++ b/vanilla-js/src/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="utf-8"/>
     <title>My First Parcel App</title>
+    <link href="app.css" type="text/css" rel="stylesheet" />
     <script type="module" src="app.js"></script>
 </head>
 <body>
-<h1>Hello, World!</h1>
+
+<div class="md:container">
+    <h1>05 Event Bubbling Capturing Delegation</h1>
+    <div class="columns-1">
+        <button id="bubble" class="bg-sky-500/100">Bubble button</button>
+    </div>
+</div>
+
 </body>
 </html>
