06 event bubbling capturing

--- a/vanilla-js/src/index.html
+++ b/vanilla-js/src/index.html
@@ -13,6 +13,16 @@
     <div class="columns-1">
         <button id="bubble" class="bg-sky-500/100">Bubble button</button>
     </div>
+
+    <div class="columns-1">
+        <ul id="test-ul">
+            <li>Item 1 </li>
+            <li>Item 2 </li>
+            <li>Item 3 </li>
+            <li>Item 4 </li>
+            <li>Item 5 </li>
+        </ul>
+    </div>
 </div>
 
 </body>
