--- a/vanilla-js/src/index.html
+++ b/vanilla-js/src/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="utf-8"/>
     <title>My First Parcel App</title>
+    <link href="app.css" rel="stylesheet" type="text/css"/>
     <script type="module" src="app.js"></script>
 </head>
 <body>
-<h1>Hello, World!</h1>
+<main>
+    <h1 class="text-blue-600">07 - Design Patterns</h1>
+</main>
 </body>
 </html>
