--- a/vanilla-js/src/index.html
+++ b/vanilla-js/src/index.html
@@ -6,6 +6,9 @@
     <script type="module" src="app.js"></script>
 </head>
 <body>
-<h1>Hello, World!</h1>
+<h3>VanillaJS sandbox</h3>
+<div id="container">
+
+</div>
 </body>
 </html>
